# first-test

./: LICENSE  README.md  mkdocs.yml  setup.cfg  tox.ini
docs/: index.md
src/first_test/: __init__.py  _widget.py  napari.yaml
src/first_test/_tests/: test_dock_widget.py  test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
