[metadata]
name = first-test
version = 0.0.1
author = Christopher Schmied
author_email = christopher.schmied@fht.org
url = https://github.com/schmiedc/first-test
license = BSD-3-Clause
description = this is a fplugin
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/schmiedc/first-test/issues
    Documentation = https://github.com/schmiedc/first-test#README.md
    Source Code = https://github.com/schmiedc/first-test
    User Support = https://github.com/schmiedc/first-test/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points] 
napari.manifest = 
    first-test = first_test:napari.yaml
